apps/base/flashcards/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flashcards
  labels:
    http-ingress: "true"
