apps/base/flashcards/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flashcards
  namespace: flashcards
  labels:
    app: flashcards
spec:
  type: ClusterIP
  selector:
    app: flashcards
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
